<resources>
    <string name="app_name">Kotlin_Final_Project</string>

    <string name="title">Project Title: MyMoments: A Personal Diary App</string>
    <string name="course">Course: IT0079 - Mobile Applications Development 1</string>
    <string name="submitby">Submitted by:</string>
    <string name="antonio">Antonio, Juan Miguel G.</string>
    <string name="peji">Peji, Sean James C.</string>
    <string name="licas">Licas, Jaymard T.</string>
    <string name="dulutan">Dulutan, John Carlo R.</string>
    <string name="submitto">Submitted to:</string>
    <string name="professor">Sir. Joseph Calleja</string>
    <string name="datesubmitted">Date Submitted:</string>
    <string name="datesub">July 22, 2025</string>
    <string name="btnMain">Proceed</string>

    <string name="titlewnopt">MyMoments: A Personal Diary App</string>
    <string name="btnMainIntro">Welcome</string>


    <string name="login_title">Login</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Log In</string>
    <string name="go_to_signup">Don\'t have an account? Sign Up</string>

    <string name="signup_page">Sign Up</string>
    <string name="hint_name">Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="button_signup">Sign Up</string>
    <string name="back_to_login">Back to Login</string>
    <string name="btn2signup">Sign Up</string>
    <string name="go_to_login">Already have an account? Log In</string>

    <string name="proceed">Proceed</string>
    <string name="welcome">Welcome</string>

    <string name="home_title">MyMoments</string>
    <string name="empty_diary_placeholder">No moments saved yet.\nTap the + button to add one!</string>
    <string name="add_new_note">Add New Note</string>


    <string name="VAccount">View Account</string>
    <string name="logout">Logout</string>

    <string name="ACCinfo">Account Information</string>
    <string name="VAhome">Home</string>
    <string name="Umenu">User Menu</string>

    <string name="VAemail">Email Address:</string>
    <string name="VAname">Full Name:</string>
    <string name="VAdate">Member Since:</string>
    <string name="VAnotes">Notes Created:</string>
    <string name="VAnotes_deleted">Notes Deleted:</string>

    <string name="SDname">John Sean T. Antonio</string>
    <string name="SDdate">July 22, 2025</string>
    <string name="SDemail">jayseancarlomigz@gmail.com:</string>

    <string name="add_note_title_hint">Title</string>
    <string name="add_note_content_hint">Write your moment here…</string>
    <string name="save_moment_button">Save Moment</string>
    <string name="note_empty_error">Title and content cannot be empty.</string>
    <string name="note_saved_success">Moment saved!</string>
    <string name="update_note_button">Update Moment</string>
    <string name="note_updated_success">Moment updated successfully!</string>
    <string name="item_note_sample_title">Note Title</string>
    <string name="item_note_sample_date">July 18, 2025</string>
    <string name="item_note_sample_content">Note Content</string>

    <string name="delete_dialog_title">Confirm Deletion</string>
    <string name="delete_dialog_message">Are you sure you want to delete this moment? This action cannot be undone.</string>
    <string name="delete_dialog_cancel_button">Cancel</string>
    <string name="delete_dialog_delete_button">Delete</string>
    <string name="moment_deleted_toast">Moment deleted</string>
    <string name="CDIBnote_options">Note options</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="about_us">About Us</string>
    <string name="about_us_title">About Us</string>
    <string name="meet_our_team">Meet Our Team</string>
    <string name="about_us_description">We are the development team behind MyMoments, a personal diary app designed to help you capture and cherish your daily thoughts and experiences. Our goal is to provide a simple, secure, and intuitive platform for your personal reflections.</string>
    <string name="name_juan_miguel">Juan Miguel G. Antonio</string>
    <string name="name_sean_james">Sean James C. Peji</string>
    <string name="name_jaymard">Jaymard T. Licas</string>
    <string name="name_john_carlo">John Carlo R. Dulutan</string>

</resources>