<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    tools:context=".AccountActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#fff"
            app:titleTextColor="#0A1215">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/ACCinfo"
                android:textColor="#0A1215"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/user_menu_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/Umenu"
                android:padding="16dp"
                android:src="@drawable/ic_user_account"
                app:tint="#0A1215" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="28dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/VAname"
            android:textSize="18sp"
            android:textColor="#888888"/>

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/SDname"
            android:textSize="26sp"
            android:textColor="#0A1215"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/VAemail"
            android:textSize="18sp"
            android:textColor="#888888"/>

        <TextView
            android:id="@+id/tv_user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/SDemail"
            android:textSize="26sp"
            android:textColor="#0A1215"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/VAdate"
            android:textSize="18sp"
            android:textColor="#888888"/>

        <TextView
            android:id="@+id/tv_date_created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/SDdate"
            android:textSize="26sp"
            android:textColor="#0A1215"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/VAnotes"
            android:textSize="18sp"
            android:textColor="#888888"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
